# DCMotor_library

./: CMakeLists.txt  GearBox.cpp  GearBox.h  Motor.cpp  Motor.h
